--- a/server/app/src/app/app.component.html
+++ b/server/app/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div id="app-table-layer" style="position: absolute; width: 100%; height: 100%; overflow: hidden;">
   <game-table></game-table>
 </div>
-<ui-panel [top]="0" [left]="0" [width]="100" [height]="470" [title]="'メニュー'">
+<ui-panel [top]="0" [left]="0" [width]="100" [height]="160" [title]="'メニュー'">
   <nav>
     <ul>
       <li (click)="open('PeerMenuComponent')">
@@ -10,7 +10,7 @@
           <div>接続</div>
         </a>
       </li>
-      <li (click)="open('ChatWindowComponent')">
+      <!-- <li (click)="open('ChatWindowComponent')">
         <a routerLink="/" routerLinkActive="active">
           <div><i class="material-icons icon-size">speaker_notes</i></div>
           <div>チャット画面</div>
@@ -39,7 +39,7 @@
           <div><i class="material-icons icon-size">folder_shared</i></div>
           <div>インベントリ</div>
         </a>
-      </li>
+      </li> -->
       <li>
         <a routerLink="/" routerLinkActive="active">
           <label>
@@ -50,12 +50,12 @@
           </label>
         </a>
       </li>
-      <li (click)="save()">
+      <!-- <li (click)="save()">
         <a routerLink="/" routerLinkActive="active">
           <div><i class="material-icons">sd_storage</i></div>
           <div>保存</div>
         </a>
-      </li>
+      </li> -->
     </ul>
   </nav>
 </ui-panel>
